[gd_scene load_steps=24 format=2]

[ext_resource path="res://Fonts/pixel-takhisis-font/PixelTakhisis-ZajJ.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Stalinist_One/StalinistOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Shops/PowerUps.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/PowerUp.gd" type="Script" id=4]
[ext_resource path="res://Music/Shop.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scripts/PowerUpsTab.gd" type="Script" id=6]
[ext_resource path="res://Gems and Jewls/crystal.png" type="Texture" id=7]
[ext_resource path="res://PowrUps/2x.png" type="Texture" id=8]
[ext_resource path="res://PowrUps/freeze.png" type="Texture" id=9]
[ext_resource path="res://PowrUps/shield.png" type="Texture" id=10]
[ext_resource path="res://PowrUps/invincibility.png" type="Texture" id=11]
[ext_resource path="res://Scenes/ChangeSceneButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://Gems and Jewls/gem.png" type="Texture" id=13]
[ext_resource path="res://Gems and Jewls/jwel.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Shops/Info.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Shops/Button.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 1, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0.501961, 0.0313726, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.788235, 0.639216, 0.0588235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.513726, 0.219608, 0.219608, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.968627, 1, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.168627, 0.52549, 0.509804, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="Theme" id=7]
TabContainer/colors/font_color_bg = Color( 0, 0, 0, 1 )
TabContainer/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0 )
TabContainer/colors/font_color_fg = Color( 0, 0, 0, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = SubResource( 3 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 4 )
TabContainer/styles/tab_bg = SubResource( 5 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 619.953, 64.0712 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.368627, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jwel" type="Sprite" parent="."]
position = Vector2( 221.725, 12.7909 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 14 )

[node name="Jwel2" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -89.0
margin_top = 7.0
margin_right = -68.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = ": "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gem" type="Sprite" parent="."]
position = Vector2( 256.601, 12.9146 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 13 )

[node name="Gem2" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -55.0
margin_top = 7.0
margin_right = -34.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = ": "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crystal" type="Sprite" parent="."]
position = Vector2( 290.601, 11.9146 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 7 )

[node name="Crystal2" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_top = 7.0
margin_right = 1.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = ": "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
anchor_right = 1.0
margin_top = -17.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "STORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -3.0
margin_bottom = -4.0
theme = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUps" parent="TabContainer" instance=ExtResource( 3 )]
script = ExtResource( 6 )

[node name="Control" parent="TabContainer/PowerUps/RichTextLabel" index="1"]
position = Vector2( -150, 0 )

[node name="Panel1" parent="TabContainer/PowerUps/RichTextLabel/Control" index="0"]
margin_bottom = 88.0

[node name="icon" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel1" index="0"]
position = Vector2( 43, 37 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 8 )

[node name="Label" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel1" index="2"]
margin_left = 5.0
margin_right = 21.0
margin_bottom = 23.0
price = 1

[node name="Gem" type="Sprite" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel1" index="4"]
position = Vector2( 68, 14 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 13 )

[node name="Panel2" parent="TabContainer/PowerUps/RichTextLabel/Control" index="1"]
margin_bottom = 88.0

[node name="icon" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel2" index="0"]
position = Vector2( 43.7847, 38 )
scale = Vector2( 0.025, 0.025 )
texture = ExtResource( 9 )

[node name="Label" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel2" index="2"]
margin_left = 2.0
margin_right = 12.0
margin_bottom = 23.0
price = 1

[node name="Label3" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel2" index="3"]
margin_left = 26.0
margin_right = 36.0
margin_bottom = 23.0
price = 1

[node name="Jewl" type="Sprite" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel2" index="4"]
position = Vector2( 61, 14 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 14 )

[node name="Gem" type="Sprite" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel2" index="5"]
position = Vector2( 85, 14 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 13 )

[node name="Label2" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel2" index="6"]
margin_left = 3.0
margin_right = 45.0
margin_bottom = 23.0

[node name="Panel3" parent="TabContainer/PowerUps/RichTextLabel/Control" index="2"]
margin_bottom = 88.0

[node name="icon" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel3" index="0"]
position = Vector2( 43.7852, 38 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 10 )

[node name="Label" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel3" index="2"]
margin_right = 14.0
margin_bottom = 23.0
price = 1

[node name="Label3" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel3" index="3"]
margin_left = 26.0
margin_top = 6.0
margin_right = 36.0
margin_bottom = 22.0
price = 1

[node name="Crystal" type="Sprite" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel3" index="4"]
position = Vector2( 85, 14 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 7 )

[node name="Jewl" type="Sprite" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel3" index="5"]
position = Vector2( 63, 14 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 14 )

[node name="Label2" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel3" index="6"]
margin_left = 3.0
margin_right = 45.0
margin_bottom = 23.0
text = "Price:"

[node name="Panel4" parent="TabContainer/PowerUps/RichTextLabel/Control" index="3"]
margin_right = 410.0
margin_bottom = 88.0

[node name="icon" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel4" index="0"]
position = Vector2( 49.785, 39 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 11 )

[node name="Button" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel4" index="1"]
margin_left = -33.5
margin_top = -28.5281
margin_right = 34.5
margin_bottom = -2.52806

[node name="Label" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel4" index="2"]
margin_left = 10.0
margin_top = 4.52806
margin_right = 20.0
margin_bottom = 20.5281
price = 1

[node name="Label3" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel4" index="3"]
margin_left = 31.0
margin_top = 5.0
margin_right = 41.0
price = 1

[node name="Label4" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel4" index="4"]
margin_left = -10.0
margin_top = 5.0
margin_right = 0.0
price = 1

[node name="Crystal" type="Sprite" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel4" index="5"]
position = Vector2( 96, 13 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 7 )

[node name="Jewl" type="Sprite" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel4" index="6"]
position = Vector2( 74.4722, 13.4719 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 14 )

[node name="Gem" type="Sprite" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel4" index="7"]
position = Vector2( 54, 13.4719 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 13 )

[node name="Label2" parent="TabContainer/PowerUps/RichTextLabel/Control/Panel4" index="8"]
margin_left = 2.41577
margin_top = 5.0
margin_right = 42.4158
text = "Price:"

[node name="HScrollBar" type="HScrollBar" parent="TabContainer/PowerUps/RichTextLabel" index="2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.0
max_value = 120.0
page = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" parent="TabContainer/PowerUps" index="1"]
color = Color( 1, 0, 0, 0.878431 )

[node name="Label" parent="TabContainer/PowerUps/ColorRect" index="0"]
align = 1
valign = 1
autowrap = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
autoplay = true

[node name="Info" parent="." instance=ExtResource( 15 )]

[node name="Button" parent="." instance=ExtResource( 16 )]

[node name="ChangeScene" parent="." instance=ExtResource( 12 )]
margin_left = 1.73865
margin_top = 1.31821
margin_right = 61.7387
margin_bottom = 28.3182
text = "Close"
scene = "res://Scenes/LevelOverlay/Hard/Level3.tscn"
reset_score = false
reset_global_score = false
[connection signal="button_up" from="TabContainer/PowerUps/RichTextLabel/Control/Panel1/Button" to="TabContainer/PowerUps" method="_on_Button1_button_up"]
[connection signal="button_up" from="TabContainer/PowerUps/RichTextLabel/Control/Panel2/Button" to="TabContainer/PowerUps" method="_on_Button2_button_up"]
[connection signal="button_up" from="TabContainer/PowerUps/RichTextLabel/Control/Panel3/Button" to="TabContainer/PowerUps" method="_on_Button3_button_up"]
[connection signal="button_up" from="TabContainer/PowerUps/RichTextLabel/Control/Panel4/Button" to="TabContainer/PowerUps" method="_on_Button4_button_up"]
[connection signal="button_up" from="Info/Control/RichTextLabel/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Button" to="." method="_on_Button1_button_up"]

[editable path="TabContainer/PowerUps"]

[editable path="Info"]
